kubernetes/longhorn-system/longhorn/longhorn-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-basic-auth-basic-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-basic-auth-basic-auth
